--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ edition = "2018"
 clap = "2.33.1"
 feed-rs = "0.3.0"
 reqwest = { version ="0.10.6", features = ["blocking"] }
+anyhow = "1.0.31"
+thiserror = "1.0.20"
+toml = "0.5.6"
+serde = "1.0.113"
+serde_derive = "1.0.113"
