--- a/config.toml.example
+++ b/config.toml.example
@@ -1,9 +1,11 @@
-directory = "rustypod"
+directory = "downloads"
 
 [[podcasts]]
 name = "Linux Unplugged"
 uri = "https://feeds.fireside.fm/linuxunplugged/rss"
+episodes = "3"
 
 [[podcasts]]
 name = "Python Bytes"
 uri = "https://pythonbytes.fm/episodes/rss"
+episodes = "1" # Default
